<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp">
        <ImageView
            android:layout_width="300sp"
            android:layout_height="100sp"
            android:src="@drawable/watt"
            android:scaleType="centerInside"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Inicia sesión para leer y\n escribir historias - ¡Gratis!"
            android:textSize="20sp"
            android:textStyle="normal"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="55sp"
            android:background="@drawable/botonfb"
            android:text="@string/face"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="20sp"
            />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_gravity="center_vertical"
    android:gravity="center">
        <View
            android:layout_marginTop="10sp"
            android:layout_width="140sp"
            android:layout_height="1dp"
            android:background="#c4c0c0"
            android:layout_margin="20sp"
            android:layout_gravity="center"
            >
        </View>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gato"
            android:textColor="#aba7a7"
            android:textSize="15sp"
            android:layout_gravity="center"/>
    <View
        android:layout_width="140sp"
        android:layout_height="1sp"
        android:background="#c4c0c0"
        android:layout_margin="20sp"
        android:layout_gravity="center"
        >
    </View>
</LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cont"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:textColorHint="@color/colorA"
                android:textColor="@color/color"
                android:layout_marginRight="20sp"
                android:layout_marginLeft="20sp"
                android:backgroundTint="@color/color"
                android:layout_marginTop="10sp"/>
            <View
                android:layout_width="250sp"
                android:layout_height="1dp"
                android:background="#c4c0c0"
                android:layout_margin="6sp"
                android:layout_gravity="center"
                >
            </View>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/colorA"
                android:textColor="@color/color"
                android:layout_marginRight="20sp"
                android:layout_marginLeft="20sp"
                android:backgroundTint="@color/color"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="5sp"/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="55sp"
            android:background="@drawable/boton"
            android:text="@string/reg"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="20sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textt"
            android:layout_marginTop="20sp"
            android:textColor="@color/color2"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"/>
    </LinearLayout>

</RelativeLayout>
